[metadata]
name = offstream
version = 1.0.1
author = soylent
author-email =
description = Personal twitch stream recorder
long_description = file: README.md
long_description_content_type = text/markdown
keywords = twitch, streaming
url = https://github.com/soylent/offstream
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Games/Entertainment
    Topic :: Multimedia :: Video
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    flask ~= 2.0
    ipfshttpclient ~= 0.8.0a2
    sqlalchemy ~= 1.4
    streamlink ~= 3.0.3
[options.package_data]
offstream =
  static/*.ico
  static/*.txt
  templates/*.html
  templates/*.xml
[options.extras_require]
test =
  pytest ~= 6.2
  pytest-cov ~= 3.0
  python-dotenv ~= 0.19
  types-requests ~= 2.26
  sqlalchemy[mypy] ~= 1.4
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    offstream = offstream.cli:main
[mypy]
plugins = sqlalchemy.ext.mypy.plugin
strict = True
[mypy-offstream.cli]
disallow_untyped_calls = False
disallow_untyped_decorators = False
